[package]
authors = ["Odd Stråbø <oddstr13@openshell.no>"]
edition = "2018"
readme = "README.md"
name = "usb-dongle-smoltcp-6lowpan"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
#panic-halt = "0.2.0"
embedded-hal = "0.2.6"
nb = "1.0.0"

ieee802154socket = { path="./ieee802154socket"}

# USB Serial
usb-device = "0.2.7"
usbd-serial = "0.1.0"

log = "0.4.14"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.smoltcp]
git = "https://github.com/thibautvdv/smoltcp"
branch = "ieee802154"
default-features = false
features = ["log", "medium-ieee802154", "proto-sixlowpan", "socket-udp", "socket-tcp", "socket-icmp"]

[dependencies.hal]
package = "nrf52840-hal"
git = "https://github.com/oddstr13/nrf-hal"
branch = "feat/async-radio"

# this lets you use `cargo fix`!
[[bin]]
name = "usb-dongle-smoltcp-6lowpan"
#path = "bin"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
